--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,6 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
-<!-- 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency> -->
-		
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
@@ -85,6 +79,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.junit.platform</groupId>
+		    <artifactId>junit-platform-engine</artifactId>
+		    <version>1.2.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
